[package]
name = "modem"
version = "0.1.0"
authors = ["amit"]
edition = "2021"
resolver = "2"
rust-version = "1.71.0"
[[bin]]
name = "modem"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["./esp_modem"]
bindings_header = "bindings.h"
bindings_module = "esp_modem"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = "0.35.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
